main.css
/* ... */
/*HAMBURGER MENU SOLUTION FOUND - SYNTAX ERROR ON BELOW (+ adjacent sibling combinator used instead of general sibling ~, and placed in wrong place*/
 
#topnav-open[aria-expanded="true"] ~ #topnav-menu {
  translate: 0; 
}

@media (prefers-reduced-motion){
  #topnav-open[aria-expanded="true"] ~ #topnav-menu {
    opacity: 1;
  }
}
/* #topnav-open[aria-expanded="true"] {
    + #topnav-menu{translate: 0;} the + here is necessary for this to be properly selected!!
  
    @media (prefers-reduced-motion){
      + #topnav-menu{opacity: 1;}
    }
  }   
*/


/*header*/
                              
header {
width: 95%; 
display: grid;
grid-template: 100%/100%;
height: 100svh;   /*fix for full screen logo at start*/
min-height: 500px; /*fix for overlap on small windows with above*/
}
    header>.logo {width: 100%; grid-area: 1/1/1/1; margin:0; padding:0;border:0;} /*use grid to overlap the imgs by forcing into the same grid space*/
    header>div {display: flex;justify-content: center; aspect-ratio: 1350/638;} /*aspect ratio set to match roots img so they stay the same size overlayed on eachother when the viewport changes*/
    #roots {z-index: 1;}
    #tree {
      flex:none; height: 70%; z-index: 2;
      transition: transform .5s ease-in-out;
      /*TODO: input a growth transition CSS animation here*/ 
    }
    #tree:hover {
      transform: scale(1.2) translateY(-5%); /*translate added to offset the growth of the tree to make sure the roots still look connected*/
    } 

            h1{position: relative; height: 1lh; top: 35%; left:3%; font-size: 9vw; color:#e3f5ff; z-index: 3;}

            @media screen and (max-width: 850px){
              header>.logo {height: 500px; margin-top: 50px;}
              #roots { display: none; visibility: hidden;}
              h1{top: 200px; font-size:53px;}
            }

            @media screen and (max-width: 400px){

            }


    /*TODO: fix styling of header so its elements can be zoomed*/
    /*TODO: fix header tree and h1 so that the tree is below the text but can be hovered easily without the text getting in the way at all
    -possible fix could be to just have the image on top but alter it so that the tree forms a "t" to blend it in with the text*/

    

/*main*/
main {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
}



/*sections*/
section {width: 100%; height:fit-content;}

/*section - mission statement and highlight reel backgrounds*/
        #highlight {
          width: 100%;
          aspect-ratio: 1350/690;
          /*aspect-ratio: 1350/1410;*/ /*aspect ratio matches background images*/
        /*  margin-top: -8%;
          margin-bottom: -13%;*/
          z-index: 3;
        }
          .highlightitem {margin: 0; z-index: 4;}
        
        #roots-highlight{

           /*height: 100dvh;*/
          width: 100%;
           aspect-ratio: 1350/690;
           /*background-image: url("/RoomToRoam/images/roots-highlightV7.png");
           background-repeat:no-repeat;
           background-size: cover;*/
          
          
        }

          


            #roots-missionstatement{
              aspect-ratio: 1350/390;
              width: 100%;
              background-image: url("/RoomToRoam/images/roots-missionstatement.png");
              background-repeat:no-repeat;
              background-size:cover;
            /* z-index: 3; */
            }

/*section - mission statement content*/

/*section - highlight reel content*/
 
#highlight>#roots-highlight{
  display: flex;
}

  .slider {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;  
    /*height: 233px;*/
    aspect-ratio:1350/690;
    display: flex;
    width: 100%;
  }

    .slider>button{
      height: 100%;
      z-index: 31;
     border: none;
      flex: 1;
      color: white;
      background-color: transparent;
    }
        #slide-left {padding-right: 15%;
          background-image: url("/RoomToRoam/images/slidebuttonarrowleft.png");
          background-size: cover;
        }
        #slide-right {padding-left: 15%;
          background-image: url("/RoomToRoam/images/slidebuttonarrowright.png");
          background-size: cover;
        }

    #slides-container{
      z-index: 0;
      aspect-ratio: 1350/690;
      width: 100%;
      left: 0px;
      flex: 8;

    }
      .slide-anchor {
          
          border: none;
          position: absolute;
          aspect-ratio: 16/9; /*SLIDE IMAGE THUMBNAIL SIZE HERE*/
          /*width: 33%;*/
          width: 50%;
          transition: left 500ms ease-in-out, transform 500ms ease-in-out;
        }

        .slider img, .slider iframe{
          /*opacity: .95;*/
          width: 100%;
          height: 100%;
          border: none;
          box-shadow: 0px 0px 2px 2px black;
        }

/* TODO: decide whether to add this feature
        .slide-artistlink {
          width: 100%;
          height: 10px;
          z-index: 100;
          position: inherit;
          left: inherit;
          top: inherit;
          bottom: inherit;
          right: inherit;

        }
*/


/*section - swirl animated buttons*/

        #swirl-container{display:flex; width: 100%; z-index: 1;}
        .swirl{ flex:1; max-width: 33%; z-index: 1; opacity: .8; position: relative;} /*possibly remove opacity style*/
       .swirl-image{width: 100%; position: relative; top: 6%; z-index: 1;}
        .swirl-link{
          display: block; width: 100%; height: 100%; 
          justify-content: center; align-items: center; display: flex; 
          position: relative; top: -94%; 
          text-decoration: none;
          z-index: 5;
          
          background-image: url("/RoomToRoam/images/swirltext.png");
          background-size: cover;
          background-color: transparent;
          
          }
/* ... */

